--- a/css/variables.css
+++ b/css/variables.css
@@ -23,7 +23,7 @@
   --neutral-color-6: #a6aeba;
   --neutral-color-7: #99a1ac;
 
-  --shadow-color: 0px 4px 4px rgba(150, 150, 150, 0.2);
+  --shadow-color: 0px 4px 8px 0px rgba(0, 0, 0, 0.25);
 
   --open-sans: "Open Sans", sans-serif;
 
